refs task [FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                         <span class="navbar-toggler-icon" onclick="openNav()"></span>
                     </button>
                     <div id="mySidenav" class="sidenav">
-                        <a id="close__nav" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-times"></i></a>
+                        <a id="close__nav" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i
+                                class="far fa-times"></i> </a>
                         <a id="about__nav" href="#container__section2">ABOUT</a>
                         <a id="journa__nav" href="#container__section3">JOURNA</a>
                         <a id="service__nav" href="#container__section5">SERVICES</a>
@@ -126,7 +127,8 @@
 
                             <div class="text-right__2">
                                 <p>
-                                    <span class="font-italic">Furniture Optimal</span> stands out among property<br> agencies, and offers a
+                                    <span class="font-italic">Furniture Optimal</span> stands out among property<br>
+                                    agencies, and offers a
                                     wide
                                     range of creative and<br> strategic services for brands,<br> companies, foundations
                                     and other remarkable<br> organizations.
@@ -239,67 +241,81 @@
                 </div>
                 <div class="swiper-wrapper" id="swiper-wrapper4">
                     <div class="swiper-slide" id="swiper1__slide1__section4">
-                        <div class="swiper-slide-overlay"></div>
-                        <div class="swiper-slide-details fadeIn-bottom">
-                            <h3 class="swiper-slide-title">Design Interior</h3>
-                        </div>
-                        <div class="swiper__slide__image">
-                            <img src="./assets/images/Rectangle 178.svg">
-                        </div>
+                        <a href="https://noithatjapan.com/">
+                            <div class="swiper-slide-overlay"></div>
+                            <div class="swiper-slide-details fadeIn-bottom">
+                                <h3 class="swiper-slide-title">Design Interior</h3>
+                            </div>
+                            <div class="swiper__slide__image">
+                                <img src="./assets/images/Rectangle 178.svg">
+                            </div>
+                        </a>
 
                     </div>
 
                     <div class="swiper-slide" id="swiper1__slide1__section4">
-                        <div class="swiper-slide-overlay"></div>
-                        <div class="swiper-slide-details fadeIn-bottom">
-                            <h3 class="swiper-slide-title">Design Interior</h3>
-                        </div>
-                        <div class="swiper__slide__image">
-                            <img src="./assets/images/Rectangle 179.svg">
-                        </div>
+                        <a href="http://vietnamtradeoffice.net/he-thong-ban-le-do-noi-that-ngoai-that-cua-uc/">
+
+                            <div class="swiper-slide-overlay"></div>
+                            <div class="swiper-slide-details fadeIn-bottom">
+                                <h3 class="swiper-slide-title">Design Interior</h3>
+                            </div>
+                            <div class="swiper__slide__image">
+                                <img src="./assets/images/Rectangle 179.svg">
+
+                            </div>
+                        </a>
 
                     </div>
 
                     <div class="swiper-slide" id="swiper1__slide1__section4">
-                        <div class="swiper-slide-overlay"></div>
-                        <div class="swiper-slide-details fadeIn-bottom">
-                            <h3 class="swiper-slide-title">Design Interior</h3>
-                        </div>
-                        <div class="swiper__slide__image">
-                            <img src="./assets/images/Rectangle 171 (1).svg">
-                        </div>
+                        <a href="https://noithattrungnguyen.vn/">
+                            <div class="swiper-slide-overlay"></div>
+                            <div class="swiper-slide-details fadeIn-bottom">
+                                <h3 class="swiper-slide-title">Design Interior</h3>
+                            </div>
+                            <div class="swiper__slide__image">
+                                <img src="./assets/images/Rectangle 171 (1).svg">
+                            </div>
+                        </a>
 
                     </div>
 
                     <div class="swiper-slide" id="swiper1__slide1__section4">
-                        <div class="swiper-slide-overlay"></div>
-                        <div class="swiper-slide-details fadeIn-bottom">
-                            <h3 class="swiper-slide-title">Design Interior</h3>
-                        </div>
-                        <div class="swiper__slide__image">
-                            <img src="https://lh3.googleusercontent.com/iuGR7v20fSLoPYUcWfbEj7C42msjv-6gl0oe3mCmOFbQDOUWuzh17L4X8p0jN9WvrW8ry9CK3TCur6Sc3u6V6szk5TgRGita002EphhFpxCSHCJzsgySl6RQZ_MVRyf9PTKODo8uozjUPSBFNsmucnBNQUra2PH_Iy35aQ8tB-9uCnnOuin1Hx_PBdoVpO7-4VNK67m-Izu5YfKHktgZv1bC9SCHGDpk2EFMnDJkM2ANKp9DTNbreLBV7oAOxq6m3xtD9t1hF20RKQX5i0cbsj14MIm4O8RvI7wUzzzv4cOvUMuSxeXyLmUTKoYbHPStXM8ADBguSqs-mCIljKDN6PEYNMJxrAlhuceN-3aRqvF9VFWx1t-I_gZGdIrraZzjNdzrymbsx2LJBiE4V1c7_lYqr7pITYaHnwDnp0sIhlF9Qidy_2pvxvoGm9yZX76vrNZ78aI43-MIwGWsQ5hVouurwR0qvQo_nOh42IFI8yod8-IjAGcXO6Rajzze8ub1oDBvMxTt7jMSOOCB0aaUOVvz1i4-qV1czFAnSaQcyEf02iOr2-E9w4Fv9flvRjFncqyDes-dITkZTA3esQjdjsFXmai-9-2PS3VpErk=w864-h648-no">
-                        </div>
+                        <a href="https://dnudecor.vn/phong-cach-thiet-ke/noi-that-nhat-ban/">
+                            <div class="swiper-slide-overlay"></div>
+                            <div class="swiper-slide-details fadeIn-bottom">
+                                <h3 class="swiper-slide-title">Design Interior</h3>
+                            </div>
+                            <div class="swiper__slide__image">
+                                <img src="https://vuongquocden.vn/images/2020/10/07/noi-that-phong-cahc-trung-quocd.jpg">
+                            </div>
+                        </a>
                     </div>
 
 
                     <div class="swiper-slide" id="swiper1__slide1__section4">
-                        <div class="swiper-slide-overlay"></div>
-                        <div class="swiper-slide-details fadeIn-bottom">
-                            <h3 class="swiper-slide-title">Design Interior</h3>
-                        </div>
-                        <div class="swiper__slide__image">
-                            <img src="https://noithattrevietnam.com/uploaded/Kien-thuc-nha-dep/thiet-ke-noi-that-nha-bep/thiet-ke-noi-that-nha-bep-1.jpg">
-                        </div>
+                        <a href="https://dongsuh.vn/">
+                            <div class="swiper-slide-overlay"></div>
+                            <div class="swiper-slide-details fadeIn-bottom">
+                                <h3 class="swiper-slide-title">Design Interior</h3>
+                            </div>
+                            <div class="swiper__slide__image">
+                                <img src="https://noithattrevietnam.com/uploaded/Kien-thuc-nha-dep/thiet-ke-noi-that-nha-bep/thiet-ke-noi-that-nha-bep-1.jpg">
+                            </div>
+                        </a>
 
                     </div>
 
                 </div>
-                <div class="swiper-pagination" id="pagination1">
-                    <span class="swiper-pagination-bullet swiper-pagination-bullet-active pagination__click" id="hidden__id" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-                    <span class="swiper-pagination-bullet pagination__click" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
-                    <span class="swiper-pagination-bullet pagination__click" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
-                    <span class="swiper-pagination-bullet  pagination__click" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
-                    <span class="swiper-pagination-bullet pagination__click" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
+                <div class="pagination__click">
+                    <div class="swiper-pagination" id="pagination1">
+                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+                        <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
+                        <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
+                        <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
+                        <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
+                    </div>
                 </div>
                 <p class="count__number1"></p>
             </div>
@@ -309,10 +325,13 @@
                     Our <span class="underline-slide" style="text-decoration: underline;">Services</span>
                 </div>
                 <div class="swiper-wrapper" id="swiper-wrapper5">
+
                     <div class="swiper-slide" id="swiper1__slide1__section5">
-                        <div class="swiper-slide__image1">
-                            <img src="./assets/images/Rectangle 171.svg" class="img2">
-                        </div>
+                        <a href="https://id.pinterest.com/melissagobel/library-study-room/">
+                            <div class="swiper-slide__image1">
+                                <img src="./assets/images/Rectangle 171.svg" class="img2">
+                            </div>
+                        </a>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
                             <div class="swiper-slide__design1">Design Interior</div>
@@ -322,10 +341,13 @@
 
                     </div>
 
+
                     <div class="swiper-slide" id="swiper1__slide1__section5">
-                        <div class="swiper-slide__image1">
-                            <img src="./assets/images/Rectangle 184.svg" class="img2">
-                        </div>
+                        <a href="https://www.thespruce.com/bathroom-design-ideas-and-inspiration-4101873">
+                            <div class="swiper-slide__image1">
+                                <img src="./assets/images/Rectangle 184.svg" class="img2">
+                            </div>
+                        </a>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
                             <div class="swiper-slide__design1">Design Interior</div>
@@ -336,9 +358,11 @@
                     </div>
 
                     <div class="swiper-slide" id="swiper1__slide1__section5">
-                        <div class="swiper-slide__image1">
-                            <img src="./assets/images/Rectangle 185.svg" class="img2">
-                        </div>
+                        <a href="https://www.architecturaldigest.com/story/best-architectural-projects-article">
+                            <div class="swiper-slide__image1">
+                                <img src="./assets/images/Rectangle 185.svg" class="img2">
+                            </div>
+                        </a>
                         <div class="swiper-slide__icon__design2">
                             <div class="swiper-slide__icon2"></div>
                             <div class="swiper-slide__design2">Design Architecture</div>
@@ -348,9 +372,11 @@
 
                     </div>
                     <div class="swiper-slide" id="swiper1__slide1__section5">
-                        <div class="swiper-slide__image1">
-                            <img src="https://ytuongnhadep.vn/Images/image/1-thiet-ke-nha-biet-thu-sang-trong-ven-bien/thiet-ke-nha-biet-thu-sang-trong-ven-bien-5.jpg" class="img2">
-                        </div>
+                        <a href="https://www.thenordroom.com/blog/2021/2/24/30-home-library-design-ideas">
+                            <div class="swiper-slide__image1">
+                                <img src="https://ytuongnhadep.vn/Images/image/1-thiet-ke-nha-biet-thu-sang-trong-ven-bien/thiet-ke-nha-biet-thu-sang-trong-ven-bien-5.jpg" class="img2">
+                            </div>
+                        </a>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
                             <div class="swiper-slide__design1">Design Interior</div>
@@ -361,9 +387,11 @@
                     </div>
 
                     <div class="swiper-slide" id="swiper1__slide1__section5">
-                        <div class="swiper-slide__image1">
-                            <img src="https://image-us.eva.vn/upload/4-2019/images/2019-11-20/1574236472-7fe8675e9eb3e0f322f36c0fda4567a5.jpg" class="img2">
-                        </div>
+                        <a href="https://www.pinterest.com/tatyana_blinova/restroom-design/">
+                            <div class="swiper-slide__image1">
+                                <img src="https://image-us.eva.vn/upload/4-2019/images/2019-11-20/1574236472-7fe8675e9eb3e0f322f36c0fda4567a5.jpg" class="img2">
+                            </div>
+                        </a>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
                             <div class="swiper-slide__design1">Design Interior</div>
@@ -374,12 +402,14 @@
                     </div>
 
                 </div>
-                <div class="swiper-pagination" id="pagination2">
-                    <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="0" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-                    <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
-                    <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
-                    <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
-                    <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
+                <div class="pagination__click">
+                    <div class="swiper-pagination" id="pagination2">
+                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="0" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+                        <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
+                        <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
+                        <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
+                        <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
+                    </div>
                 </div>
                 <p class="count__number2"></p>
             </div>
