refs task [FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                         <span class="navbar-toggler-icon" onclick="openNav()"></span>
                     </button>
                     <div id="mySidenav" class="sidenav">
-                        <a id="close__nav" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i
-                                class="far fa-times"></i> </a>
+                        <a id="close__nav" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-times"></i></a>
                         <a id="about__nav" href="#container__section2">ABOUT</a>
                         <a id="journa__nav" href="#container__section3">JOURNA</a>
                         <a id="service__nav" href="#container__section5">SERVICES</a>
